examples/test/testpolicy7910.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7910
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key22: value25
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value0
          key20: value33
      podSelector:
        matchLabels:
          key25: value16
          key30: value15
